weird safari bug with grid align-items center

--- a/components/Features.module.scss
+++ b/components/Features.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   grid-template-columns: max-content repeat(3, auto);
   grid-gap: var(--grid-gap);
-  align-items: baseline;
+  align-items: center;
 }
 
 .name {
